--- a/doc-service/doc-service-dev.yml
+++ b/doc-service/doc-service-dev.yml
@@ -17,3 +17,6 @@ openapi:
     title: doc-service
     version: 1.0.0
     url: http://localhost:8080
+springdoc:
+  api-docs:
+    path: /doc-service/v3/api-docs
