--- a/doc-service/doc-service-dev.yml
+++ b/doc-service/doc-service-dev.yml
@@ -21,4 +21,4 @@ springdoc:
   api-docs:
     path: /doc-service/v3/api-docs
   swagger-ui:
-    path: /product-service/swagger-ui.html  
+    path: /doc-service/swagger-ui.html  
