--- a/gateway-service/gateway-service-dev.yml
+++ b/gateway-service/gateway-service-dev.yml
@@ -13,9 +13,5 @@ springdoc:
     urls:
       - url: /v3/api-docs
         name: Gateway Service
-      - url: /user-service/v3/api-docs
-        name: User Service
-      - url: /category-service/v3/api-docs
-        name: Category Service
-      - url: /notification-service/v3/api-docs
-        name: Notification Service
+      - url: /doc-service/v3/api-docs
+        name: Doc Menu Service
