--- a/auth-service/auth-service-dev.yml
+++ b/auth-service/auth-service-dev.yml
@@ -28,4 +28,4 @@ springdoc:
     path: /auth-service/v3/api-docs
   swagger-ui:
     path: /auth-service/swagger-ui.html  
-    
+baseURL: http://localhost
