--- a/gateway-service/gateway-service-dev.yml
+++ b/gateway-service/gateway-service-dev.yml
@@ -17,3 +17,5 @@ springdoc:
         name: Doc Menu Service
       - url: /auth-service/v3/api-docs
         name: User Service
+      - url: /help-service/v3/api-docs
+        name: Help Service
