--- a/doc-service/doc-service-dev.yml
+++ b/doc-service/doc-service-dev.yml
@@ -8,6 +8,10 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 100MB
 eureka:
   client:
     serviceUrl:
