--- a/doc-service/doc-service-dev.yml
+++ b/doc-service/doc-service-dev.yml
@@ -16,6 +16,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
+file:
+  uploadPath: doc-service/src/main/resources/storage/
 openapi:
   service:
     title: doc-service
